--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+.svelte-kit
 build/
 develop-eggs/
 dist/
@@ -19,6 +20,7 @@ eggs/
 .eggs/
 lib/
 lib64/
+package/
 parts/
 sdist/
 var/
