--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -17,13 +17,16 @@
     "@playwright/test": "^1.21.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "@uswds/uswds": "^3.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
+    "sass": "^1.51.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
+    "svelte-preprocess": "^4.10.6",
     "typescript": "~4.6.2"
   },
   "type": "module"
