Add support for linting SCSS and Svelte
Install the stylelint syntax for SCSS and for HTML so that stylelint can
run on .scss and .svelte files without issue.

--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -22,6 +22,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "postcss-html": "^1.4.1",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
     "sass": "^1.51.0",
@@ -29,6 +30,7 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-order": "^5.0.0",
     "stylelint-prettier": "^2.0.0",
+    "stylelint-scss": "^4.2.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.6",
