--- a/services/ui/.stylelintrc
+++ b/services/ui/.stylelintrc
@@ -1,3 +1,4 @@
 {
-    "extends": "stylelint-prettier/recommended"
+    "extends": "stylelint-prettier/recommended",
+    "customSyntax": "postcss-html"
 }
