Configure specific rules for file types
We need different custom syntaxes for SCSS files and Svelte components.
I've set it up so that we apply the custom syntax based on file
extension, and added an exception for Svelte's `:global` pseudo-class.

--- a/services/ui/.stylelintrc
+++ b/services/ui/.stylelintrc
@@ -1,4 +1,19 @@
 {
-    "extends": "stylelint-prettier/recommended",
-    "customSyntax": "postcss-html"
+    "extends": ["stylelint-config-recommended-scss", "stylelint-prettier/recommended"],
+    "overrides": [
+        {
+            "files": ["*.scss", "**/*.scss"],
+            "customSyntax": "postcss-scss"
+        },
+        {
+            "files": ["*.svelte", "**/*.svelte"],
+            "customSyntax": "postcss-html",
+            "rules": {
+                "selector-pseudo-class-no-unknown": [
+                    true,
+                    { "ignorePseudoClasses": ["global"] }
+                ]
+            }
+        }
+    ]
 }
