--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -28,6 +28,7 @@
     "sass": "^1.51.0",
     "stylelint": "^14.8.2",
     "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended-scss": "^6.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-prettier": "^2.0.0",
     "stylelint-scss": "^4.2.0",
