Configure stylelint-order
Specify the order for blocks and properties based on the guide from
9elements: https://9elements.com/css-rule-order/

--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -11,7 +11,7 @@
     "check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
     "test": "playwright test",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore . && stylelint --ignore-path .gitignore **/*.{css,scss,svelte}",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. . && stylelint --ignore-path .gitignore --fix **/*.{css,scss,svelte}"
   },
   "devDependencies": {
     "@playwright/test": "^1.21.0",
