Replace Svelte skeleton page with a placeholder
Replaced the basic Svelte skeleton page with a placeholder of our own
that gestures to the app layout using a title bar and a main content
area.

--- a/services/ui/.stylelintrc
+++ b/services/ui/.stylelintrc
@@ -27,6 +27,7 @@
                     "noEmptyLineBetween": true,
                     "properties": [
                         "position",
+                        "isolation",
                         "z-index",
                         "top",
                         "right",
@@ -43,6 +44,7 @@
                         "flex-wrap",
                         "justify-content",
                         "align-content",
+                        "place-items",
                         "justify-items",
                         "align-items",
                         "gap",
