--- a/services/api/pyproject.toml
+++ b/services/api/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+mypy = "^0.950"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
