--- a/services/api/pyproject.toml
+++ b/services/api/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.9"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 mypy = "^0.950"
+black = "^22.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
