--- a/services/ui/.prettierrc
+++ b/services/ui/.prettierrc
@@ -1,5 +1,5 @@
 {
-    "singleQuote": true,
-    "trailingComma": "none",
+    "singleQuote": false,
+    "trailingComma": "es5",
     "printWidth": 88
 }
