--- a/services/api/pyproject.toml
+++ b/services/api/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.9"
 pytest = "^5.2"
 mypy = "^0.950"
 black = "^22.3.0"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
