--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -64,7 +64,7 @@ jobs:
         working-directory: services/ui
         run: |
           npx playwright install-deps
-          npm run test
+          npm test
   build:
     runs-on: ubuntu-latest
     needs: [lint, check, test]
