--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -8,10 +8,13 @@ on:
     # Path filters aren't evaluated for tags - https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#onpushpull_requestpull_request_targetpathspaths-ignore
     paths:
       - 'services/api/**'
+      - '.github/workflows/**'
   pull_request:
     paths:
       - 'services/api/**'
+      - '.github/workflows/**'
     branches: [ $default-branch ]
+  workflow_dispatch: # Manually
 env:
   REGISTRY: ghcr.io/noaa-gsl/unified-graphics/api
 
@@ -76,27 +79,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Extract branch/tag name
-        shell: bash
-        run: |
-          if [[ "${GITHUB_EVENT_NAME}" == "pull_request" ]]; then
-            # PR build
-            echo "BRANCH=${GITHUB_HEAD_REF}" >> ${GITHUB_ENV}
-          elif [[ "${GITHUB_EVENT_NAME}" == "push" ]]; then
-            # Handle differences between branches/tags
-            if [[ "${GITHUB_REF}" == *"heads"* ]]; then
-              # Branch build
-              echo "BRANCH=${GITHUB_REF#refs/heads/}" >> ${GITHUB_ENV}
-            elif [[ "${GITHUB_REF}" == *"tags"* ]]; then
-              # Tag build
-              echo "BRANCH=${GITHUB_REF#refs/tags/}" >> ${GITHUB_ENV}
-            else
-              echo "ERROR: Unanticipated Git Ref"
-              exit 1
-            fi
-          else
-            echo "ERROR: Unanticipated GitHub Event"
-            exit 1
-          fi
+        run: python3 ./.github/scripts/extract_git_ref.py # Provides env.BRANCH
       - name: Build & tag image
         run: |
           docker build -t ${{ env.REGISTRY }}:${{ env.BRANCH }} services/api
@@ -114,27 +97,7 @@ jobs:
     needs: build
     steps:
       - name: Extract branch/tag name
-        shell: bash
-        run: |
-          if [[ "${GITHUB_EVENT_NAME}" == "pull_request" ]]; then
-            # PR build
-            echo "BRANCH=${GITHUB_HEAD_REF}" >> ${GITHUB_ENV}
-          elif [[ "${GITHUB_EVENT_NAME}" == "push" ]]; then
-            # Handle differences between branches/tags
-            if [[ "${GITHUB_REF}" == *"heads"* ]]; then
-              # Branch build
-              echo "BRANCH=${GITHUB_REF#refs/heads/}" >> ${GITHUB_ENV}
-            elif [[ "${GITHUB_REF}" == *"tags"* ]]; then
-              # Tag build
-              echo "BRANCH=${GITHUB_REF#refs/tags/}" >> ${GITHUB_ENV}
-            else
-              echo "ERROR: Unanticipated Git Ref"
-              exit 1
-            fi
-          else
-            echo "ERROR: Unanticipated GitHub Event"
-            exit 1
-          fi
+        run: python3 ./.github/scripts/extract_git_ref.py # Provides env.BRANCH
       - name: Scan image with Trivy
         uses: aquasecurity/trivy-action@master
         with:
