--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -67,6 +67,7 @@ jobs:
         working-directory: services/ui
         run: |
           npx playwright install-deps
+          npx playwright install
           npm test
   build:
     runs-on: ubuntu-latest
@@ -91,6 +92,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - uses: actions/checkout@v3
       - name: Extract branch/tag name
         run: python3 ./.github/scripts/extract_git_ref.py # Provides env.BRANCH
       - name: Scan image with Trivy
