--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -114,3 +114,31 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: 'trivy-results.sarif'
+  deploy:
+    runs-on: ubuntu-latest
+    environment: vlab
+    concurrency: vlab
+    needs: scan
+    steps:
+      - uses: actions/checkout@v3
+      - name: Extract branch/tag name
+        run: python3 ./.github/scripts/extract_git_ref.py # Provides env.BRANCH
+      - name: Login to GHCR
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Login to ECR
+        uses: aws-actions/amazon-ecr-login@v1
+      - name: retag image and push
+        run: |
+          docker pull ${{ env.REGISTRY }}:${{ env.BRANCH }}
+          docker tag ${{ env.REGISTRY }}:${{ env.BRANCH }} ${{ secrets.AWS_REGISTRY }}/api:${{ env.BRANCH }}
+          docker push ${{ secrets.AWS_REGISTRY }}/api:${{ env.BRANCH }}
