--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -4,7 +4,7 @@ on:
     tags:
       - '[0-9]+.[0-9]+.[0-9]+'
       - '[0-9]+.[0-9]+.[0-9]+-rc[0-9]+'
-    branches: [ $default-branch ]
+    branches: [ main ]
     # Path filters aren't evaluated for tags - https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#onpushpull_requestpull_request_targetpathspaths-ignore
     paths:
       - 'services/api/**'
@@ -13,7 +13,7 @@ on:
     paths:
       - 'services/api/**'
       - '.github/workflows/**'
-    branches: [ $default-branch ]
+    branches: [ main ]
   workflow_dispatch: # Manually
 env:
   REGISTRY: ghcr.io/noaa-gsl/unified-graphics/api
