--- a/.github/workflows/check-ci.yaml
+++ b/.github/workflows/check-ci.yaml
@@ -2,11 +2,11 @@ name: Check CI scripts
 
 on:
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ main ]
     paths:
       - '.github/scripts/**'
   push:
-    branches: [ $default-branch ]
+    branches: [ main ]
     paths:
       - '.github/scripts/**'
 
