--- a/services/api/pyproject.toml
+++ b/services/api/pyproject.toml
@@ -10,6 +10,8 @@ authors = [
 [tool.poetry.dependencies]
 python = "^3.9"
 Flask = "^2.1.2"
+netCDF4 = "^1.5.8"
+xarray = "^2022.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
