Add --no-cache-dir for pip install
Ian's recommendation. I imagine this is to keep the image size smaller.

--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.9
 
 WORKDIR /usr/src/app
 
-RUN pip3 install gunicorn poetry \
+RUN pip3 install --no-cache-dir gunicorn poetry \
     && poetry config virtualenvs.create false
 
 COPY . .
