--- a/.github/workflows/api-cleanup-pr-images.yaml
+++ b/.github/workflows/api-cleanup-pr-images.yaml
@@ -6,7 +6,7 @@ on:
     paths:
       - 'services/api/**'
 jobs:
-  purge-images:
+  purge-ghcr-images:
     name: Cleanup PR images from ghcr.io
     runs-on: ubuntu-latest
     steps:
@@ -17,3 +17,20 @@ jobs:
           name: unified-graphics/api
           token: ${{ secrets.GHCR_CLEANUP_PAT }}
           tag: ${GITHUB_HEAD_REF}
+  purge-ecr-images:
+    name: Cleanup PR images from ECR
+    runs-on: ubuntu-latest
+    environment: vlab
+    concurrency: vlab
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Cleanup image
+        run: |
+          aws ecr batch-delete-image \
+            --repository-name rtma-viz/api \
+            --image-ids imageTag=${GITHUB_HEAD_REF}
