Make sure we trigger CI when the CI is modified

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -9,10 +9,12 @@ on:
     paths:
       - 'services/api/**'
       - '.github/workflows/**'
+      - '.github/scripts/**'
   pull_request:
     paths:
       - 'services/api/**'
       - '.github/workflows/**'
+      - '.github/scripts/**'
     branches: [ main ]
   workflow_dispatch: # Manually
 env:
