--- a/.github/workflows/ui-cleanup-pr-images.yaml
+++ b/.github/workflows/ui-cleanup-pr-images.yaml
@@ -6,6 +6,8 @@ on:
     paths:
       - '.nvmrc'
       - 'services/ui/**'
+      - '.github/workflows/**'
+      - '.github/scripts/**'
 jobs:
   purge-ghcr-images:
     name: Cleanup PR images from ghcr.io
