--- a/.github/workflows/ui-cleanup-pr-images.yaml
+++ b/.github/workflows/ui-cleanup-pr-images.yaml
@@ -19,7 +19,7 @@ jobs:
           owner: noaa-gsl
           name: unified-graphics/ui
           token: ${{ secrets.GHCR_CLEANUP_PAT }}
-          tag: ${GITHUB_HEAD_REF}
+          tag: ${{ github.head_ref }}
   purge-ecr-images:
     name: Cleanup PR images from ECR
     runs-on: ubuntu-latest
@@ -36,4 +36,4 @@ jobs:
         run: |
           aws ecr batch-delete-image \
             --repository-name rtma-vis/ui \
-            --image-ids imageTag=${GITHUB_HEAD_REF}
+            --image-ids imageTag=${{ github.head_ref }}
