Switch the dev overlay to use our GHCR images
Also run the containers in a dev namespace in the cluster

--- a/kubernetes/overlays/dev/api/kustomization.yaml
+++ b/kubernetes/overlays/dev/api/kustomization.yaml
@@ -1,9 +1,12 @@
 bases:
-- ../../base/api
+- ../../../base/api
 namePrefix: dev-
 images:
 - name: unified-graphics/api
-#   newName: my.docker.registry.com/my-project/myapp
-  newTag: latest
+  newName: ghcr.io/noaa-gsl/unified-graphics/api
+  newTag: main
 commonLabels:
   environment: dev
+namespace: dev
+resources:
+  - "namespace.yaml"
