--- a/kubernetes/overlays/dev/ui/kustomization.yaml
+++ b/kubernetes/overlays/dev/ui/kustomization.yaml
@@ -1,9 +1,12 @@
 bases:
-- ../../base/ui
+- ../../../base/ui
 namePrefix: dev-
 images:
 - name: unified-graphics/ui
-#   newName: my.docker.registry.com/my-project/myapp
-  newTag: latest
+  newName: ghcr.io/noaa-gsl/unified-graphics/ui
+  newTag: main
 commonLabels:
   environment: dev
+namespace: dev
+resources:
+  - "namespace.yaml"
