--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -37,5 +37,8 @@
     "svelte-preprocess": "^4.10.6",
     "typescript": "~4.6.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "d3": "^7.4.4"
+  }
 }
