Disable noImplicitAny in jsconfig
svelte-check throws a bunch of errors because we don't have declared
types. While I think it would be good to declare types for static
type-checking, it's a bit of a hassle with JSDoc, so for now I'm just
going to disable it so svelte-check passes.

--- a/services/ui/jsconfig.json
+++ b/services/ui/jsconfig.json
@@ -8,6 +8,7 @@
     "lib": ["es2020", "DOM"],
     "moduleResolution": "node",
     "module": "es2020",
+    "noImplicitAny": false,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
