--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -9,7 +9,7 @@
     "prepare": "svelte-kit sync",
     "check": "svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
-    "test": "playwright test",
+    "test": "vitest --run && playwright test",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore . && stylelint --ignore-path .gitignore src/**/*.{css,scss}",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. . && stylelint --ignore-path .gitignore --fix src/**/*.{css,scss}"
   },
@@ -18,10 +18,13 @@
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-static": "^1.0.0-next.29",
     "@sveltejs/kit": "next",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.49",
+    "@testing-library/svelte": "^3.1.3",
     "@uswds/uswds": "^3.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "jsdom": "^20.0.0",
     "postcss-html": "^1.4.1",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
@@ -35,7 +38,8 @@
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.6",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "vitest": "^0.15.2"
   },
   "type": "module",
   "dependencies": {
