--- a/kubernetes/base/ui/deployment.yaml
+++ b/kubernetes/base/ui/deployment.yaml
@@ -21,15 +21,15 @@ spec:
         spec:
             containers:
                 - image: unified-graphics/ui
-                  imagePullPolicy: Always
+                  imagePullPolicy: Always # Since we're tracking a long-lived tag, we'll want to always check for updated images
                   name: graphics-ui
                   resources:
-                    requests:
-                        memory: "1Gi"
-                        cpu: "0.5"
-                    limits:
-                        memory: "2Gi"
-                        cpu: "1"
+                      requests:
+                          memory: "1Gi"
+                          cpu: "0.5"
+                      limits:
+                          memory: "2Gi"
+                          cpu: "1"
                   ports:
                       - containerPort: 80
                         protocol: TCP
