--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -15,8 +15,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.21.0",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-static": "^1.0.0-next.29",
+    "@sveltejs/adapter-node": "^1.0.0-next.78",
     "@sveltejs/kit": "next",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.49",
     "@testing-library/svelte": "^3.1.3",
