--- a/kubernetes/base/api/service.yaml
+++ b/kubernetes/base/api/service.yaml
@@ -6,9 +6,10 @@ metadata:
   name: graphics-api
 spec:
   ports:
-  - port: 4001
+  - port: 80
     targetPort: 80 # Port to forward to in the pod
     protocol: TCP
+    name: http
   selector:
     app: graphics-api
-  type: NodePort
+  type: ClusterIP
