Add an ingress to the ui service
Also add config so the ui and api services can communicate

--- a/kubernetes/base/ui/deployment.yaml
+++ b/kubernetes/base/ui/deployment.yaml
@@ -36,3 +36,7 @@ spec:
                   # FIXME - we should explore dissallowing privilege escalation
                   securityContext:
                       allowPrivilegeEscalation: true # Default behavior
+                  envFrom:
+                      - configMapRef:
+                            name: graphics-ui
+                            
