--- a/kubernetes/overlays/dev/ui/kustomization.yaml
+++ b/kubernetes/overlays/dev/ui/kustomization.yaml
@@ -4,9 +4,16 @@ namePrefix: dev-
 images:
 - name: unified-graphics/ui
   newName: ghcr.io/noaa-gsl/unified-graphics/ui
-  newTag: main
+  newTag: 42-make-the-backend-service-endpoint-configurable
+  # newTag: main
 commonLabels:
   environment: dev
 namespace: dev
 resources:
   - "namespace.yaml"
+
+configMapGenerator:
+  - name: graphics-ui
+    behavior: merge
+    envs:
+      - dev.ui.env
