--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/kit": "next",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.49",
     "@testing-library/svelte": "^3.1.3",
+    "@types/debug": "^4.1.7",
     "@uswds/uswds": "^3.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
