Add debug output to the UI service
Additionally, the double-quotes in the UG_DIAG_API_HOST variable were
causing the frontend to not find the backend. Remove them for now while
we figure out why.

--- a/kubernetes/overlays/dev/ui/kustomization.yaml
+++ b/kubernetes/overlays/dev/ui/kustomization.yaml
@@ -4,8 +4,7 @@ namePrefix: dev-
 images:
 - name: unified-graphics/ui
   newName: ghcr.io/noaa-gsl/unified-graphics/ui
-  newTag: 42-make-the-backend-service-endpoint-configurable
-  # newTag: main
+  newTag: main
 commonLabels:
   environment: dev
 namespace: dev
