--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -2,10 +2,10 @@
   "name": "ui",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
+    "dev": "vite dev",
+    "build": "vite build",
     "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
+    "preview": "vite preview",
     "prepare": "svelte-kit sync",
     "check": "svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
@@ -17,7 +17,6 @@
     "@playwright/test": "^1.23.0",
     "@sveltejs/adapter-node": "^1.0.0-next.78",
     "@sveltejs/kit": "next",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.49",
     "@testing-library/svelte": "^3.1.3",
     "@types/debug": "^4.1.7",
     "@uswds/uswds": "^3.0.0",
@@ -39,6 +38,7 @@
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.6",
     "typescript": "~4.6.2",
+    "vite": "^2.9.14",
     "vitest": "^0.15.2"
   },
   "type": "module",
