Clear out the NPM in our production image
Trivy is flagging an Alibaba key in the .npm/_cacache directory. I don't
know if this is actually a concern for us or not, but we don't really
need that cache around bloating up the image anyway.

--- a/services/ui/Dockerfile
+++ b/services/ui/Dockerfile
@@ -19,7 +19,8 @@ COPY --from=build /home/node/app/build /home/node/app/build
 RUN apt-get update \
     && apt-get upgrade -y \
     && rm -rf /var/lib/apt/lists/* \
-    && npm install --ignore-scripts
+    && npm install --ignore-scripts \
+    && npm clean cache --force
 
 ENV PORT=80
 EXPOSE 80
