--- a/kubernetes/overlays/dev/api/kustomization.yaml
+++ b/kubernetes/overlays/dev/api/kustomization.yaml
@@ -8,7 +8,7 @@ patchesStrategicMerge:
 - patch_add_volume.yaml
 
 configMapGenerator:
-  - name: graphics-api
+  - name: unified-graphics-api
     behavior: merge
     envs:
       - dev.api.env
