--- a/kubernetes/base/ui/service.yaml
+++ b/kubernetes/base/ui/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: graphics-ui
-  name: graphics-ui
+    app: unified-graphics-ui
+  name: unified-graphics-ui
 spec:
   ports:
   - port: 80
@@ -11,5 +11,5 @@ spec:
     protocol: TCP
     name: http
   selector:
-    app: graphics-ui
+    app: unified-graphics-ui
   type: ClusterIP
