--- a/kubernetes/overlays/dev/ingress.yaml
+++ b/kubernetes/overlays/dev/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: graphics-ui
+  name: unified-graphics-ui
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
     # kubernetes.io/ingress.class: traefik
@@ -14,13 +14,13 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: graphics-ui
+                name: unified-graphics-ui
                 port:
                   number: 80
           # - path: /diag # TODO - this should be redirecting to the app root
           #   pathType: Prefix
           #   backend:
           #     service:
-          #       name: dev-graphics-api # TODO - kustomize isn't updating this automatically
+          #       name: dev-unified-graphics-api # TODO - kustomize isn't updating this automatically
           #       port:
           #         number: 80
