--- a/kubernetes/overlays/dev/ui/kustomization.yaml
+++ b/kubernetes/overlays/dev/ui/kustomization.yaml
@@ -6,7 +6,7 @@ images:
   newTag: main
 
 configMapGenerator:
-  - name: graphics-ui
+  - name: unified-graphics-ui
     behavior: merge
     envs:
       - dev.ui.env
