--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -58,7 +58,7 @@ jobs:
           npm test
   build:
     runs-on: ubuntu-latest
-    needs: [lint, check, test]
+    needs: [lint, test]
     steps:
       - uses: actions/checkout@v3
       - name: Extract branch/tag name
