--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -13,4 +13,4 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/*
 
 EXPOSE 80
-CMD ["gunicorn", "unified_graphics.wsgi:app", "--bind=0.0.0.0:80"]
+CMD ["gunicorn", "unified_graphics.wsgi:app", "--bind=0.0.0.0:80", "--timeout=600"]
