Look for data in /tmp instead of a user's home dir
Hardcoding my home dir into the manifests didn't seem like the most
friendly thing to do. Once we switch to S3 for data, this shouldn't be
an issue.

--- a/kubernetes/overlays/dev/api/patch_add_volume.yaml
+++ b/kubernetes/overlays/dev/api/patch_add_volume.yaml
@@ -13,5 +13,5 @@ spec:
             volumes:
               - name: local-volume
                 hostPath:
-                  path: "/home/ian.mcginnis/git/verification/unified-graphics/tmp/data"
+                  path: "/tmp/ug-data"
                   type: Directory
