Standardize manifest formatting
Run the YAML Language Server formatter over the manifests so we have
a consistent layout.

--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -1,8 +1,8 @@
 resources:
   - api
   - ui
-  - "namespace.yaml"
-  - "ingress.yaml"
+  - namespace.yaml
+  - ingress.yaml
 commonLabels:
   environment: dev
 namespace: dev
