--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -25,5 +25,9 @@
     "vite": "^2.9.14",
     "vitest": "^0.15.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "htm": "^3.1.1",
+    "preact": "^10.10.3"
+  }
 }
