--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -2,9 +2,13 @@
   "name": "ui",
   "version": "0.0.1",
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
+    "clean": "del build",
+    "dev": "run-s clean dev:*",
+    "dev:vite": "vite dev",
+    "build": "run-s clean build:*",
+    "build:vite": "vite build",
     "preview": "vite preview",
+    "start": "npm run dev",
     "test": "vitest --run",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore . && stylelint --ignore-path .gitignore src/**/*.{css,scss}",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. . && stylelint --ignore-path .gitignore --fix src/**/*.{css,scss}"
@@ -12,8 +16,10 @@
   "devDependencies": {
     "@uswds/uswds": "^3.0.0",
     "d3": "^7.4.4",
+    "del-cli": "^5.0.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.3.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "sass": "^1.51.0",
     "stylelint": "^14.8.2",
