Print coverage report after the test
Not sure if uploading the artifacts is all that useful, so I'm also
adding the ASCII report as part of the workflow.

I wonder if this is why people use those badges in their README to
report code coverage, because GitHub CI doesn't do anything useful with
it…

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -76,6 +76,7 @@ jobs:
         working-directory: services/api
         run: |
           poetry run coverage run -m pytest
+          poetry run coverage report
           poetry run coverage html
       - name: Archive code coverage report
         uses: actions/upload-artifact@v3
