--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -9,13 +9,14 @@
     "build:vite": "vite build",
     "preview": "vite preview",
     "start": "npm run dev",
-    "test": "vitest --run",
+    "test": "vitest --run --coverage",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore . && stylelint --ignore-path .gitignore src/**/*.{css,scss}",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. . && stylelint --ignore-path .gitignore --fix src/**/*.{css,scss}"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.8",
     "@uswds/uswds": "^3.0.0",
+    "c8": "^7.12.0",
     "d3": "^7.4.4",
     "del-cli": "^5.0.0",
     "eslint": "^8.20.0",
