--- a/services/ui/.stylelintrc
+++ b/services/ui/.stylelintrc
@@ -2,6 +2,12 @@
   "extends": ["stylelint-config-recommended-scss", "stylelint-prettier/recommended"],
   "plugins": ["stylelint-order"],
   "rules": {
+    "scss/at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": ["layer"]
+      }
+    ],
     "order/order": [
       "dollar-variables",
       "custom-properties",
