--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -29,6 +29,7 @@
     "stylelint-prettier": "^2.0.0",
     "stylelint-scss": "^4.2.0",
     "vite": "^3.0.0",
+    "vite-plugin-static-copy": "^0.9.0",
     "vitest": "^0.15.2"
   },
   "type": "module",
