--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -19,6 +19,7 @@
     "del-cli": "^5.0.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.3.0",
+    "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "sass": "^1.51.0",
