Add cobertura reporting to UI tests
I can't change the location of the reports directory in c8, seems like
it might be a bug:

https://github.com/bcoe/c8/issues/419

So I've just added coverage to the gitignore and let it be.

--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -9,7 +9,7 @@
     "build:vite": "vite build",
     "preview": "vite preview",
     "start": "npm run dev",
-    "test": "NODE_V8_COVERAGE='.coverage/' vitest --run --coverage",
+    "test": "vitest --run --coverage",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore . && stylelint --ignore-path .gitignore src/**/*.{css,scss}",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. . && stylelint --ignore-path .gitignore --fix src/**/*.{css,scss}"
   },
