--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -77,12 +77,26 @@ jobs:
         run: |
           poetry run coverage run -m pytest
           poetry run coverage report
-          poetry run coverage html
-      - name: Archive code coverage report
-        uses: actions/upload-artifact@v3
+          poetry run coverage xml
+      - name: Code Coverage Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        working-directory: services/api
         with:
-          name: api-code-coverage-report
-          path: services/api/htmlcov/
+          filename: coverage.xml
+          badge: true
+          fail_below_min: true
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: both
+          thresholds: '60 80'
+      - name: Add Coverage PR Comment
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: github.event_name == 'pull_request'
+        with:
+          recreate: true
+          path: api-code-coverage-results.md
   build:
     runs-on: ubuntu-latest
     needs: [lint, type-check, test]
