--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -56,6 +56,25 @@ jobs:
           npx playwright install-deps
           npx playwright install
           npm test
+      - name: Code Coverage Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        working-directory: services/ui
+        with:
+          filename: src/coverage/cobertura-coverage.xml
+          badge: true
+          fail_below_min: true
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: both
+          thresholds: '60 80'
+      - name: Add Coverage PR Comment
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: github.event_name == 'pull_request'
+        with:
+          recreate: true
+          path: ui-code-coverage-results.md
   build:
     runs-on: ubuntu-latest
     needs: [lint, test]
