Remove working-directory property
I guess this isn't valid for the code coverage summary action

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -80,9 +80,8 @@ jobs:
           poetry run coverage xml
       - name: Code Coverage Report
         uses: irongut/CodeCoverageSummary@v1.3.0
-        working-directory: services/api
         with:
-          filename: coverage.xml
+          filename: services/api/coverage.xml
           badge: true
           fail_below_min: true
           format: markdown
