--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. . && stylelint --ignore-path .gitignore --fix src/**/*.{css,scss}"
   },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^1.0.8",
     "@uswds/uswds": "^3.0.0",
     "d3": "^7.4.4",
     "del-cli": "^5.0.0",
@@ -29,13 +30,10 @@
     "stylelint-order": "^5.0.0",
     "stylelint-prettier": "^2.0.0",
     "stylelint-scss": "^4.2.0",
+    "svelte": "^3.50.1",
     "vite": "^3.0.0",
     "vite-plugin-static-copy": "^0.9.0",
     "vitest": "^0.15.2"
   },
-  "type": "module",
-  "dependencies": {
-    "htm": "^3.1.1",
-    "preact": "^10.10.3"
-  }
+  "type": "module"
 }
