--- a/services/ui/package.json
+++ b/services/ui/package.json
@@ -20,9 +20,11 @@
     "del-cli": "^5.0.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.7.1",
     "sass": "^1.51.0",
     "stylelint": "^14.8.2",
     "stylelint-config-prettier": "^9.0.3",
