--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -32,6 +32,7 @@ jobs:
           python-version: '3.9'
           cache: 'poetry'
           cache-dependency-path: 'services/api/poetry.lock'
+      - run: poetry env use 3.9
       - name: Install dependencies
         working-directory: services/api
         run: poetry install
@@ -52,6 +53,7 @@ jobs:
           python-version: '3.9'
           cache: 'poetry'
           cache-dependency-path: 'services/api/poetry.lock'
+      - run: poetry env use 3.9
       - name: Install dependencies
         working-directory: services/api
         run: poetry install
@@ -69,6 +71,7 @@ jobs:
           python-version: '3.9'
           cache: 'poetry'
           cache-dependency-path: 'services/api/poetry.lock'
+      - run: poetry env use 3.9
       - name: Install dependencies
         working-directory: services/api
         run: poetry install
