Change the poetry env within the poetry install step
Each step runs in its own process in GitHub Actions so environment changes
are not preserved between steps. I may need to add this to the
`poetry run ...` commands as well. I hope it's unnecessary. Apparently
Poetry has some "well-known" issues with correctly detecting the
desired Python version. See:

* Poetry issue: https://github.com/python-poetry/poetry/issues/655
* setup-python workaround: https://github.com/actions/setup-python/issues/374#issuecomment-1088938718

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -32,12 +32,11 @@ jobs:
           python-version: '3.9'
           cache: 'poetry'
           cache-dependency-path: 'services/api/poetry.lock'
-      - name: Force Poetry to the correct Python version
-        working-directory: services/api
-        run: poetry env use 3.9
       - name: Install dependencies
         working-directory: services/api
-        run: poetry install
+        run: |
+          poetry env use 3.9
+          poetry install
       - name: Lint with Black
         working-directory: services/api
         run: poetry run black --check .
@@ -55,12 +54,11 @@ jobs:
           python-version: '3.9'
           cache: 'poetry'
           cache-dependency-path: 'services/api/poetry.lock'
-      - name: Force Poetry to the correct Python version
-        working-directory: services/api
-        run: poetry env use 3.9
       - name: Install dependencies
         working-directory: services/api
-        run: poetry install
+        run: |
+          poetry env use 3.9
+          poetry install
       - name: Check Types with mypy
         working-directory: services/api
         run: poetry run mypy src/
@@ -75,12 +73,11 @@ jobs:
           python-version: '3.9'
           cache: 'poetry'
           cache-dependency-path: 'services/api/poetry.lock'
-      - name: Force Poetry to the correct Python version
-        working-directory: services/api
-        run: poetry env use 3.9
       - name: Install dependencies
         working-directory: services/api
-        run: poetry install
+        run: |
+          poetry env use 3.9
+          poetry install
       - name: Test
         working-directory: services/api
         run: poetry run pytest
