--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -30,8 +30,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          cache: 'poetry'
-          cache-dependency-path: 'services/api/poetry.lock'
+          # cache: 'poetry'
+          # cache-dependency-path: 'services/api/poetry.lock'
       - name: Install dependencies
         working-directory: services/api
         run: |
@@ -52,8 +52,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          cache: 'poetry'
-          cache-dependency-path: 'services/api/poetry.lock'
+          # cache: 'poetry'
+          # cache-dependency-path: 'services/api/poetry.lock'
       - name: Install dependencies
         working-directory: services/api
         run: |
@@ -71,8 +71,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          cache: 'poetry'
-          cache-dependency-path: 'services/api/poetry.lock'
+          # cache: 'poetry'
+          # cache-dependency-path: 'services/api/poetry.lock'
       - name: Install dependencies
         working-directory: services/api
         run: |
