--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -95,7 +95,7 @@ jobs:
         if: github.event_name == 'pull_request'
         with:
           recreate: true
-          path: api-code-coverage-results.md
+          path: code-coverage-results.md
   build:
     runs-on: ubuntu-latest
     needs: [lint, type-check, test]
