Add a header to API stick PR comment config
Since we'll want two comments — one for the API and one for the UI — we
need to set headers so that the sticky PR comment action doesn't remove
the first one to finish running.

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -81,6 +81,7 @@ jobs:
       - name: Code Coverage Report
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
+          header: API Coverage
           filename: services/api/coverage.xml
           badge: true
           fail_below_min: true
