Fix UI coverage reporting
- Add a header so that the sticky PR comment doesn't get replaced by
  other comments
- Fix the filename loaded for the comment

--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -72,8 +72,9 @@ jobs:
         uses: marocchino/sticky-pull-request-comment@v2
         if: github.event_name == 'pull_request'
         with:
+          header: UI Coverage
           recreate: true
-          path: ui-code-coverage-results.md
+          path: code-coverage-results.md
   build:
     runs-on: ubuntu-latest
     needs: [lint, test]
