--- a/services/api/pyproject.toml
+++ b/services/api/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 python = "^3.9"
 Flask = "^2.1.2"
 netCDF4 = "^1.6.1"
-xarray = "^2022.3.0"
+xarray = "2022.10.0" # using 2022.11.0 caused numpy warnings
 fsspec = "^2022.10.0"
 s3fs = "^2022.10.0"
 
@@ -21,6 +21,7 @@ mypy = "^0.950"
 black = "^22.3.0"
 flake8 = "^4.0.1"
 coverage = "^6.4.4"
+moto = {version = "^4.0.8", extras = ["server"]}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
