--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -29,11 +29,11 @@ jobs:
         run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.11'
       - name: Install dependencies
         working-directory: services/api
         run: |
-          poetry env use 3.9
+          poetry env use 3.11
           poetry install
       - name: Lint with Black
         working-directory: services/api
@@ -41,6 +41,9 @@ jobs:
       - name: Lint with Flake8
         working-directory: services/api
         run: poetry run flake8 --count --show-source --statistics .
+      - name: Lint with isort
+        working-directory: services/api
+        run: poetry run isort --check .
   type-check:
     runs-on: ubuntu-latest
     steps:
@@ -49,11 +52,11 @@ jobs:
         run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.11'
       - name: Install dependencies
         working-directory: services/api
         run: |
-          poetry env use 3.9
+          poetry env use 3.11
           poetry install
       - name: Check Types with mypy
         working-directory: services/api
@@ -66,11 +69,11 @@ jobs:
         run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.11'
       - name: Install dependencies
         working-directory: services/api
         run: |
-          poetry env use 3.9
+          poetry env use 3.11
           poetry install
       - name: Test
         working-directory: services/api
