--- a/services/api/pyproject.toml
+++ b/services/api/pyproject.toml
@@ -22,7 +22,11 @@ black = "^22.3.0"
 flake8 = "^4.0.1"
 coverage = "^6.4.4"
 moto = {version = "^4.0.8", extras = ["server"]}
+isort = "^5.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
