--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -63,6 +63,8 @@ jobs:
         run: poetry run mypy src/
   test:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v3
       - name: Install poetry
