--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -40,6 +40,8 @@ jobs:
         run: npm run lint
   test:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
