--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -105,6 +105,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: [lint, type-check, test]
+    permissions:
+      packages: write
     steps:
       - uses: actions/checkout@v3
       - name: Extract branch/tag name
