--- a/.github/workflows/ui.yaml
+++ b/.github/workflows/ui.yaml
@@ -80,6 +80,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: [lint, test]
+    permissions:
+      packages: write
     steps:
       - uses: actions/checkout@v3
       - name: Extract branch/tag name
