--- a/services/api/pyproject.toml
+++ b/services/api/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 python = "^3.11"
 Flask = "^2.1.2"
 netCDF4 = "^1.6.1"
-xarray = "2022.10.0"  # Xarray > v2022.11 gives warnings about numpy array sizes changing. https://github.com/pydata/xarray/issues/7259
+xarray = "^2023.02.0"
 fsspec = "^2022.10.0"
 s3fs = "^2022.10.0"
 zarr = "^2.13.6"
