Move linting/formatting configs to project root
I don't think pre-commit finds the configs if they aren't in the root
directory, and anyway, it's better to have one set of configs for the
whole project, rather than per-service.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Create a tmp/ directory if you need a place for files you don't want to commit
 tmp/
 
+# Libraries we vendor for development
+vendor/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
