--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -2,20 +2,20 @@ name: "API Service Build"
 on:
   push:
     tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
-      - '[0-9]+.[0-9]+.[0-9]+-rc[0-9]+'
-    branches: [ main ]
+      - "[0-9]+.[0-9]+.[0-9]+"
+      - "[0-9]+.[0-9]+.[0-9]+-rc[0-9]+"
+    branches: [main]
     # Path filters aren't evaluated for tags - https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#onpushpull_requestpull_request_targetpathspaths-ignore
     paths:
-      - 'services/api/**'
-      - '.github/workflows/**'
-      - '.github/scripts/**'
+      - "services/api/**"
+      - ".github/workflows/**"
+      - ".github/scripts/**"
   pull_request:
     paths:
-      - 'services/api/**'
-      - '.github/workflows/**'
-      - '.github/scripts/**'
-    branches: [ main ]
+      - "services/api/**"
+      - ".github/workflows/**"
+      - ".github/scripts/**"
+    branches: [main]
   workflow_dispatch: # Manually
 env:
   REGISTRY: ghcr.io/noaa-gsl/unified-graphics/api
@@ -29,7 +29,7 @@ jobs:
         run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install dependencies
         working-directory: services/api
         run: |
@@ -52,7 +52,7 @@ jobs:
         run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install dependencies
         working-directory: services/api
         run: |
@@ -71,7 +71,7 @@ jobs:
         run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install dependencies
         working-directory: services/api
         run: |
@@ -95,7 +95,7 @@ jobs:
           hide_complexity: true
           indicators: true
           output: both
-          thresholds: '60 80'
+          thresholds: "60 80"
       - name: Add Coverage PR Comment
         uses: marocchino/sticky-pull-request-comment@v2
         if: github.event_name == 'pull_request'
@@ -133,12 +133,12 @@ jobs:
       - name: Scan image with Trivy
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: '${{ env.REGISTRY }}:${{ env.BRANCH }}'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
+          image-ref: "${{ env.REGISTRY }}:${{ env.BRANCH }}"
+          format: "sarif"
+          output: "trivy-results.sarif"
           ignore-unfixed: true
-          severity: 'CRITICAL,HIGH'
-          exit-code: '1'
+          severity: "CRITICAL,HIGH"
+          exit-code: "1"
         env:
           TRIVY_USERNAME: ${{ github.actor }}
           TRIVY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
@@ -146,7 +146,7 @@ jobs:
         if: always()
         uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: 'trivy-results.sarif'
+          sarif_file: "trivy-results.sarif"
   deploy:
     if: ${{ github.actor != 'dependabot[bot]' }} # Don't deploy Dependabot changes
     runs-on: ubuntu-latest
