Configure nginx reverse proxy
I've tested this with the local docker containers and it looks like the
proxy config is working correctly. I think all of the k8s configuration
can stay the same because the relationships and roles of both the
containers is unchanged.

--- a/services/api/Dockerfile-webserver
+++ b/services/api/Dockerfile-webserver
@@ -10,6 +10,7 @@ RUN npm run build
 FROM nginx:1.21
 
 COPY --from=build /home/node/app/build /usr/share/nginx/html/static
+COPY default.conf.template /etc/nginx/templates/
 RUN apt-get update \
     && apt-get upgrade -y \
     && rm -rf /var/lib/apt/lists/*
